@@ -40,6 +40,7 @@ Bug Fixes
     * Fix for anchor creation when non-alpha characters are involved
     * Fix to invalidate session after new user registration 
     * Theme files no longer refer to legacy $entry variable
+    * Using Number instead of Integer for SQL sum() results
 
 
 -------------------------------------------------------------------------------
